@@ -232,6 +232,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26641: doctest.DocFileTest and doctest.testfile() now support
+  packages (module splitted into multiple directories) for the package
+  parameter.
+
 - Issue #25195: Fix a regression in mock.MagicMock. _Call is a subclass of
   tuple (changeset 3603bae63c13 only works for classes) so we need to
   implement __ne__ ourselves.  Patch by Andrew Plummer.
